8216135: C2 assert(!had_error) failed: bad dominance

Reviewed-by: thartmann, kvn